<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/airplane"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CitiesPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvTitle"
        android:text="@string/strTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_alignParentStart="@+id/tvTitle"
        android:text="@string/strFromCity"
        android:id="@+id/tvFromCity"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentEnd="true"
        android:text="@string/strSelectCity"
        android:id="@+id/tvSpinnerItem1"
        android:layout_alignBottom="@+id/tvFromCity"
        android:layout_alignStart="@+id/tvSpinnerItem2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strToCity"
        android:id="@+id/tvToCity"
        android:layout_below="@+id/tvFromCity"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/strSelectCity"
        android:id="@+id/tvSpinnerItem2"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tvToCity"
        android:layout_alignStart="@+id/etDiscountCode" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strDiscount"
        android:id="@+id/tvDiscount"
        android:layout_alignBottom="@+id/etDiscountCode"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/etDiscountCode"
        android:layout_above="@+id/btnCalculate"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="35dp"
        android:layout_toEndOf="@+id/btnCalculate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="activateTravelResults"
        android:text="@string/strCalculate"
        android:id="@+id/btnCalculate"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/btnCalculate"
        android:text="@string/strDistance"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvDistance" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/btnCalculate"
        android:text="@string/strDefaultValue"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvDistanceResult" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDistance"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/strTicketPrice"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvTicketPrice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/tvDistanceResult"
        android:text="@string/strDefaultValue"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvTicketPriceResult" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strBonusMile"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/tvTicketPrice"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvBonusMile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/tvTicketPriceResult"
        android:text="@string/strDefaultValue"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvBonusMileResult" />
</RelativeLayout>
